Added validations and create action

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -14,8 +14,9 @@
           <%= f.label :comments %>
           <%= f.text_area :comments, class: 'form-control' %>
         </div>
+        <%= f.submit 'Submit', class: 'btn btn-default' %>
+      <% end %>
     </div>
   </div>
-  <% end %>
 </div>
 
