Updated forms for stripe

--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -37,6 +37,6 @@
   
   
   <div class="actions form-group">
-    <%= f.submit "Sign up", class: 'btn btn-success' %>
+    <%= f.submit "Sign up", class: 'btn btn-success', id: 'form-submit-btn' %>
   </div>
 <% end %>
