--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,3 +11,9 @@ body {
   background:      -o-linear-gradient(90deg, #283048 10%, #859398 90%); /* Opera 11.10+ */
   background:         linear-gradient(90deg, #283048 10%, #859398 90%); /* W3C */
 }   
+
+.alert-notice {
+  color: #8a6d3b;
+  background-color: #fcf8e3;
+  border-color: #faebcc;
+}
