--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,18 @@
-<%= image_tag @user.profile.avatar.url %>
-<%= @user.profile.first_name %> <%= @user.profile.last_name %></br>
-<%= @user.profile.job_title %></br>
-<% if current_user.plan_id == 2 %>
-    <%= @user.profile.phone_number %></br>
-    <%= @user.profile.contact_email %></br>
-<% end %>
-<%= @user.profile.description %></br>
+<div class="row">
+    <div class="col-md-3 text-center">
+        <%= image_tag @user.profile. avatar.url %>
+    </div>
+    <div class="col-md-9">
+        <h1><%= @user.profile.first_name %> <%= @user.profile.last_name %></h1>
+        <h3><span class="job_title_icon"><%= job_title_icon %></span> <%= @user.profile.job_title %></h3>
+        <div class"well">
+            <%= @user.profile.description %>
+        </div>
+        
+        <% if current_user.plan_id == 2 %>
+            <%= @user.profile.phone_number %></br>
+            <%= @user.profile.contact_email %></br>
+        <% end %>
+        
+    </div>
+</div>
