Made improvements to user profile page

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -6,4 +6,23 @@
     border-radius: 4px;
     background-color: #337ab7;
     color: white;
+    text-align: center;
 } 
+
+.well.profile-block {
+    color: #fff;
+    h3 {
+        margin-top: 0;
+    }//sass allows you to select nested classes/tags within a css selector/
+}//this selects the entire class, adding a space between the two selects a nested class/
+
+
+.well.profile-description {
+    background-color: #5cb85c;
+    border-color: #4cae4c;
+}
+
+.well.contact-info {
+     background-color: #5bc0de;
+     border-color: #46b8da;
+}
