--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,8 @@
+.user-show-avatar {
+    height: 128px;
+    width: 128px;
+}
+
 .job_title_icon{
     display: inline-block;
     width: 30px;
@@ -25,4 +30,12 @@
 .well.contact-info {
      background-color: #5bc0de;
      border-color: #46b8da;
+}
+
+.user-index-avatar{
+    border-radius: 50%;
+}
+
+.well.white-bg {
+    background-color: white;
 }
