Saved changes to users.css

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,4 @@
+/*Users' Show Page Styles*/
 .user-show-avatar {
     height: 128px;
     width: 128px;
@@ -32,6 +33,8 @@
      border-color: #46b8da;
 }
 
+
+/*Users' Index Page Styles*/
 .user-index-avatar{
     border-radius: 50%;
 }
