--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,12 @@
                                 <%= link_to user do %>
                                     <h2><%= user.profile.first_name %> <%= user.profile.last_name %></h2>
                                  <% end %>   
-                                <p> <%= user.profile.job_title %> </p>
+                                <p> 
+                                <%= user.profile.job_title %> 
+                                <% if user.plan_id == 2 %> <%# will only show label next to job title if user has pro membership %>
+                                    <span class="label label-danger">PRO</span><%# adding the span tag adds a label next to job title on community page %>
+                                <% end %>
+                                </p>
                             </div>
                         </div>
                     </li>
