Added helpful copy

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
+        <h1>DevMatch Community</h1>
+        <p>Welcome to the DevMatch community. Users must fill out a profile in order to be visible in the community.</p>
         <ul class="list-unstyled">
             <% @users.each do |user| %>
                 <% if user.profile %> <%# will output only if user has created a profile %>
